@@ -51,11 +51,6 @@ void			SDLX_DisplaySet(void);
 void			SDLX_BackgroundSet(SDL_Texture *bg);
 SDLX_Display	*SDLX_DisplayGet(void);
 
-/**
-* @brief Legacy function to clear screen, use SDLX_ResetWindow instead
- */
-void			SDLX_screen_reset(SDL_Renderer *renderer, SDL_Color *bg_color);
-
 void			SDLX_AnimationUpdate(void);
 void			SDLX_RenderQueueAdd(int queue, SDLX_Sprite sprite);
 
